--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 Revision history for Perl extension CGI::Application::Plugin::Apache
 
-0.06 (Oct. 29, 2004)
+0.09 (Nov 10, 2004)
+    - added Makefile.PL to MANIFEST so that CPAN could handle the 
+        install (CPANPLUS handled it just fine)
+    - minor documentation improvements
+
+0.08 (Nov 8, 2004)
     - First public release
