--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension CGI::Application::Plugin::Apache
 
+0.11
+    - fixed small bug dealing with testing of header props
+    - Added more tests
+
 0.10  ()
     - Added CGI::Application::Plugin::Apache::Request wrapper around 
         Apache::Request for some CGI.pm compatability
