--- a/README
+++ b/README
@@ -34,21 +34,22 @@ SYNOPSIS
 
 DESCRIPTION
     This plugin helps to try and fix some of the annoyances of using
-    CGI::Application in a pure mod_perl (1.0 or 2.0) environment.
-    CGI::Application assumes that you use CGI.pm, but I wanted to avoid it's
-    bloat and have access to the performance of the Apache::* modules so
-    along came this plugin. At the current moment it only does two things:
+    CGI::Application in a pure mod_perl (1.0 or 2.0) environment (see
+    INSTALLATION for specific issues regarding installation under mod_perl
+    2.x). CGI::Application assumes that you use CGI.pm, but I wanted to
+    avoid it's bloat and have access to the performance of the Apache::*
+    modules so along came this plugin. At the current moment it only does
+    two things:
 
-    Use Apache::Request as the "$self->query" object thus avoiding the
+    Use Apache::Request as the `$self->query' object thus avoiding the
     creation of the CGI.pm object.
     Override the way CGI::Application creates and prints it's HTTP headers.
-    Since it was using CGI.pm's "header()" and "redirect()" method's we
-    needed an alternative. So now we use the "Apache->send_http_header()"
+    Since it was using CGI.pm's `header()' and `redirect()' method's we
+    needed an alternative. So now we use the `Apache->send_http_header()'
     method. This has a few additional benefits other than just not using
     CGI.pm. It means that we can use other Apache::* modules that might also
     create outgoing headers (e.g. Apache::Cookie) without CGI::Application
     clobbering them.
-
 EXPORTED METHODS
     This module uses Exporter to provide methods to your application module.
     Most of the time you will never actually use these methods since they
@@ -65,11 +66,12 @@ EXPORTED METHODS
     override any method then you may not want to import it from here.
 
   handler()
+
     This method gives your application the ability to run as a straight
     mod_perl handler. It simply creates an instance of you application and
-    then runs it (using "$app->new()" and "$app->run()"). It does not pass
+    then runs it (using `$app->new()' and `$app->run()'). It does not pass
     any arguments into either method. It then returns an
-    "Apache::Constants::OK" value. If you need anything more than this,
+    `Apache::Constants::OK' value. If you need anything more than this,
     please feel free to not import this method and write your own. You could
     do it like this:
 
@@ -82,12 +84,14 @@ EXPORTED METHODS
         }
 
   cgiapp_get_query()
+
     This overrides CGI:App's method for retrieving the query object. This is
     the standard way of using something other than CGI.pm so it's no
     surprise that we use it here. It simply creates and returns a new
-    Apache::Request object from "Apache->request".
+    Apache::Request object from `Apache->request'.
 
   _send_headers()
+
     I didn't like the idea of exporting this private method (I'd rather
     think it was a 'protected' not 'private) but right now it's the only way
     to have any say in how the HTTP headers are created. Please see "HTTP
@@ -100,8 +104,9 @@ HTTP Headers
     possible.
 
   Cookies
+
     HTTP cookies should now be created using Apache::Cookie and it's
-    "bake()" method not with "header_add()" or "header_props()".
+    `bake()' method not with `header_add()' or `header_props()'.
 
     You can still do the following to create a cookie
 
@@ -121,6 +126,7 @@ HTTP Headers
         $cookie->bake();
 
   Redirects
+
     You can still do the following to perform an HTTP redirect
 
         $self->header_props( uri => $some_url);
@@ -143,10 +149,10 @@ COMPATIBILITY
     CGI.pm and family.
 
     If you are trying to use this module but don't want to have to change
-    your previous code that uses "header_props()" or "header_add()" then we
+    your previous code that uses `header_props()' or `header_add()' then we
     try to help you out by being as CGI compatible as we can, but it is
     always better to use the mod_perl api. If you still want to use
-    "header_props()" or "header_add()" remember that it will cause a
+    `header_props()' or `header_add()' remember that it will cause a
     performance hit because it will use helper routines that try and emulate
     CGI.pm.
 
@@ -177,10 +183,22 @@ COMPATIBILITY
     environment, it will try to do the right thing by simply doing nothing
     :)
 
+INSTALLATION
+    This module is designed to function equally under mod_perl 1.x and
+    mod_perl 2.x. The only real issue comes during the installation and
+    testing phase. In order to track dependencies, etc we need to know which
+    version you are trying to install this for. By default we assume
+    mod_perl 1.x. If you want to change this, you simple pass a `MP2' option
+    to the `Build.PL' script.
+
+      perl ./Build.PL MP2=1
+
+    That's pretty easy, right?
+
 AUTHOR
     Michael Peters <mpeters@plusthree.com>
 
-    Thanks to Plus Three, LLC (http://www.plusthree.com) for sponsoring my
+    Thanks to Plus Three, LP (http://www.plusthree.com) for sponsoring my
     work on this module
 
 CONTRIBUTORS
@@ -191,13 +209,11 @@ CONTRIBUTORS
     Cees Hek <ceeshek@gmail.com>
     Drew Taylor <drew@drewtaylor.com>
     Ron Savage <ron@savage.net.au>
-
 SEE ALSO
     * CGI::Application
     * Apache
     * Apache::Request
     * Apache::Cookie
-
 LICENSE
     This library is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
