--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension CGI::Application::Plugin::Apache
 
+0.12
+    - minor bug fixes in the compatability layer for cookies and uploads
+    - added docs mentioning CPAP_CGI_Compat and linking to 
+        CGI::Application::Plugin::Apache::Request
+
 0.11
     - fixed small bug dealing with testing of header props
     - Added more tests
