Import of WONKO/CGI-Application-Plugin-Apache-0.13 from CPAN.
gitpan-cpan-distribution: CGI-Application-Plugin-Apache
gitpan-cpan-version:      0.13
gitpan-cpan-path:         WONKO/CGI-Application-Plugin-Apache-0.13.tar.gz
gitpan-cpan-author:       WONKO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CGI::Application::Plugin::Apache
 
+0.13
+    - fixed warning about unitialized ENV var
+
 0.12
     - minor bug fixes in the compatability layer for cookies and uploads
     - added docs mentioning CPAP_CGI_Compat and linking to 
