--- a/README
+++ b/README
@@ -41,15 +41,16 @@ DESCRIPTION
     modules so along came this plugin. At the current moment it only does
     two things:
 
-    Use Apache::Request as the `$self->query' object thus avoiding the
+    Use Apache::Request as the "$self->query" object thus avoiding the
     creation of the CGI.pm object.
     Override the way CGI::Application creates and prints it's HTTP headers.
-    Since it was using CGI.pm's `header()' and `redirect()' method's we
-    needed an alternative. So now we use the `Apache->send_http_header()'
+    Since it was using CGI.pm's "header()" and "redirect()" method's we
+    needed an alternative. So now we use the "Apache->send_http_header()"
     method. This has a few additional benefits other than just not using
     CGI.pm. It means that we can use other Apache::* modules that might also
     create outgoing headers (e.g. Apache::Cookie) without CGI::Application
     clobbering them.
+
 EXPORTED METHODS
     This module uses Exporter to provide methods to your application module.
     Most of the time you will never actually use these methods since they
@@ -66,12 +67,11 @@ EXPORTED METHODS
     override any method then you may not want to import it from here.
 
   handler()
-
     This method gives your application the ability to run as a straight
     mod_perl handler. It simply creates an instance of you application and
-    then runs it (using `$app->new()' and `$app->run()'). It does not pass
+    then runs it (using "$app->new()" and "$app->run()"). It does not pass
     any arguments into either method. It then returns an
-    `Apache::Constants::OK' value. If you need anything more than this,
+    "Apache::Constants::OK" value. If you need anything more than this,
     please feel free to not import this method and write your own. You could
     do it like this:
 
@@ -84,14 +84,12 @@ EXPORTED METHODS
         }
 
   cgiapp_get_query()
-
     This overrides CGI:App's method for retrieving the query object. This is
     the standard way of using something other than CGI.pm so it's no
     surprise that we use it here. It simply creates and returns a new
-    Apache::Request object from `Apache->request'.
+    Apache::Request object from "Apache->request".
 
   _send_headers()
-
     I didn't like the idea of exporting this private method (I'd rather
     think it was a 'protected' not 'private) but right now it's the only way
     to have any say in how the HTTP headers are created. Please see "HTTP
@@ -104,9 +102,8 @@ HTTP Headers
     possible.
 
   Cookies
-
     HTTP cookies should now be created using Apache::Cookie and it's
-    `bake()' method not with `header_add()' or `header_props()'.
+    "bake()" method not with "header_add()" or "header_props()".
 
     You can still do the following to create a cookie
 
@@ -126,7 +123,6 @@ HTTP Headers
         $cookie->bake();
 
   Redirects
-
     You can still do the following to perform an HTTP redirect
 
         $self->header_props( uri => $some_url);
@@ -149,10 +145,10 @@ COMPATIBILITY
     CGI.pm and family.
 
     If you are trying to use this module but don't want to have to change
-    your previous code that uses `header_props()' or `header_add()' then we
+    your previous code that uses "header_props()" or "header_add()" then we
     try to help you out by being as CGI compatible as we can, but it is
     always better to use the mod_perl api. If you still want to use
-    `header_props()' or `header_add()' remember that it will cause a
+    "header_props()" or "header_add()" remember that it will cause a
     performance hit because it will use helper routines that try and emulate
     CGI.pm.
 
@@ -184,14 +180,13 @@ COMPATIBILITY
     :)
 
   CGI::Application::Plugin::Apache::Request
-
     Sometimes the default compatability is not enough. For instance, if you
     are using plugins that use the cookies or upload features of CGI.pm then
     you might need some extra help.
 
     This is what CGI::Application::Plugin::Apache::Request is for. You can
-    make this your `query' object by setting the `CAPA_CGI_Compat' var to
-    `On' in your Apache config file:
+    make this your "query" object by setting the "CAPA_CGI_Compat" var to
+    "On" in your Apache config file:
 
         PerlSetVar CAPA_CGI_Compat On
 
@@ -202,8 +197,8 @@ INSTALLATION
     mod_perl 2.x. The only real issue comes during the installation and
     testing phase. In order to track dependencies, etc we need to know which
     version you are trying to install this for. By default we assume
-    mod_perl 1.x. If you want to change this, you simple pass a `MP2' option
-    to the `Build.PL' script.
+    mod_perl 1.x. If you want to change this, you simple pass a "MP2" option
+    to the "Build.PL" script.
 
       perl ./Build.PL MP2=1
 
@@ -223,11 +218,13 @@ CONTRIBUTORS
     Cees Hek <ceeshek@gmail.com>
     Drew Taylor <drew@drewtaylor.com>
     Ron Savage <ron@savage.net.au>
+
 SEE ALSO
     * CGI::Application
     * Apache
     * Apache::Request
     * Apache::Cookie
+
 LICENSE
     This library is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
