--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CGI::Application::Plugin::Apache
 
+1.00
+    - fixed misuage of Apache2::RequestUtil
+
 0.13
     - fixed warning about unitialized ENV var
 
