Import of WONKO/CGI-Application-Plugin-Apache-1.01 from CPAN.
gitpan-cpan-distribution: CGI-Application-Plugin-Apache
gitpan-cpan-version:      1.01
gitpan-cpan-path:         WONKO/CGI-Application-Plugin-Apache-1.01.tar.gz
gitpan-cpan-author:       WONKO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CGI::Application::Plugin::Apache
 
+1.01
+    - Fixed lots of compatability problems with mod_perl 2 and Apache2::Request
+
 1.00
     - fixed misuage of Apache2::RequestUtil
 
