Import of WONKO/CGI-Application-Plugin-Apache-1.02 from CPAN.
gitpan-cpan-distribution: CGI-Application-Plugin-Apache
gitpan-cpan-version:      1.02
gitpan-cpan-path:         WONKO/CGI-Application-Plugin-Apache-1.02.tar.gz
gitpan-cpan-author:       WONKO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CGI::Application::Plugin::Apache
 
+1.02
+    - Fixed RT #32437 by fixing a bad hash in the Build.PL
+
 1.01
     - Fixed lots of compatability problems with mod_perl 2 and Apache2::Request
 
